Enable preview in pos/i18533 tests