@@ -1,3 +1,6 @@
+//> using javacOpt --enable-preview --source 17
+//> test: -jvm 17+
+
 package i18533;
 
 public non-sealed class Dog extends Pet {
